<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/bind_activity_to_server"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bind_activity_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bind_activity_to_client"
        app:layout_constraintTop_toBottomOf="@+id/bind_activity_to_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bind_activity_to_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/make_activity_listen_to_server"
        app:layout_constraintTop_toBottomOf="@+id/bind_activity_to_client"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/make_activity_listen_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <Button
        android:id="@+id/send_from_activity_to_server"
        app:layout_constraintTop_toBottomOf="@+id/make_activity_listen_to_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/send_from_activity_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <Button
        android:id="@+id/send_from_client_to_server"
        app:layout_constraintBottom_toTopOf="@+id/make_client_listen_to_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/send_from_client_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <Button
        android:id="@+id/make_client_listen_to_server"
        app:layout_constraintBottom_toTopOf="@id/bind_client_to_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/make_client_listen_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <Button
        android:id="@+id/bind_client_to_server"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/bind_client_to_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>
